[package]
name = "gyromone"
version = "0.1.0"
authors = ["Wendell Liu <cuk.bas@gmail.com>"]
edition = "2018"


[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
slog = { version = "2.5.2" , features = ["max_level_trace", "release_max_level_warn"] }
slog-term = "2.5.0"
slog-async = "2.4.0"
base64 = "0.12.0"
sha2 = "0.8.1"
lazy_static = "1.4.0"
hmac = "0.7.1"
